# files-diff

./: Cargo.toml  LICENSE  README.md
src/: bd.rs  compress.rs  error.rs  lib.rs  patch.rs  rsync.rs  zip.rs
