[package]
name = "files-diff"
version = "0.1.0"
authors = ["Ilia Kalitov <ilia@134.team>"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/dolphin-foss/files-diff"
homepage = "https://github.com/dolphin-foss/files-diff"
description = "A library for diffing files and ZIP archives."
readme = "README.md"

[lib]
name = "files_diff"
path = "src/lib.rs"

[[bin]]
name = "compare-diffs"
path = "bin/compare-diffs.rs"

[dependencies]
zip = { version = "0.5.13", default-features = false, features = [
    "deflate",
    "time",
] }
pretty_env_logger = { version = "0.5.0" }
fast_rsync = "0.2.0"
rkyv = "0.8.8"
hex = "0.4.3"
md5 = "0.7.0"
bidiff = { version = "1.1.0", git = "https://github.com/divvun/bidiff.git" }
bipatch = { version = "1.1.0", git = "https://github.com/divvun/bidiff.git" }
pipe = "0.4.0"
zstd = "0.13.2"
log = "0.4.22"
tabled = "0.16.0" # todo: needed only for binary compare-diffs, mb can move to optional dependency somehow

[dev-dependencies]
bstr = "*"
tempfile = "3.8.1"
pretty_assertions = "*"
